# -rag-eat-starter-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_POLICY.md  EXTENDING.md  LICENSE  Makefile  README.md  SECURITY.md  checklist.md  pyproject.toml  requirements.txt  run.py  start.ps1  start.sh  web_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  eval_case.md  source_update.md
.github/workflows/: ci.yml  release.yml
config/: rag_pipeline.yaml
docs/: BEGINNER_START.md  EAT_Construct_Explanation.md  GETTING_STARTED.md  RAG_References.md  rag_notes_2026.md
eval/: README.md  eval_set.csv  rag_eval_set.csv
examples/: example_answer.md  example_question.md  llm_anthropic_adapter.py  output_sample.md
examples/corpus/: README.md  cancellation_terms.md  internal_pricing.md  product_codes.md  product_guide_v1.md  product_guide_v2.md  warranty_policy.md
examples/recipes/: README.md  chroma_multilingual.py  supabase_multiuser.py
knowledge/: README.md  example.md
prompts/: rag_assistant.eat  rag_system_prompt_template.md
scripts/: changelog_extract.py
security/: rag_security_checklist.md
src/rag_eat_starter_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ragkit/: __init__.py  assistant.py  cli.py  eat_loader.py  eval_runner.py  retrieval.py  retriever.py
tests/: test_anthropic_adapter.py  test_changelog_extract.py  test_edge_cases.py  test_ragkit.py  test_retriever_protocol.py  test_web_app.py
