[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eat-starter-kit"
version = "0.1.0"
description = "A small, runnable, vendor-neutral RAG core driven by an EAT behavior profile."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["ruff>=0.6"]
# Optional: a real LLM provider for examples/llm_anthropic_adapter.py
anthropic = ["anthropic>=0.40"]

[project.scripts]
rag-eat = "ragkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
# E/F/W: pycodestyle + pyflakes, I: import order, B: bugbear.
# UP (pyupgrade) is intentionally omitted: the package targets Python 3.9, where
# runtime type aliases like `Callable[[...], str]` cannot use 3.10+ `X | Y` syntax.
select = ["E", "F", "I", "W", "B"]
