[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eat-starter-kit"
version = "0.1.0"
description = "A small, runnable, vendor-neutral RAG core driven by an EAT behavior profile."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["ruff>=0.6"]
anthropic = ["anthropic>=0.40"]

[project.scripts]
rag-eat = "ragkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
