[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eat-starter-kit"
version = "0.2.0"
description = "A small, runnable, vendor-neutral RAG core driven by an EAT behavior profile."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["build>=1.2", "ruff>=0.6"]
anthropic = ["anthropic>=0.40"]
web = ["streamlit>=1.35"]
chroma = ["chromadb>=0.5", "sentence-transformers>=3.0"]
supabase = ["sentence-transformers>=3.0", "supabase>=2.0"]

[project.scripts]
rag-eat = "ragkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
